# Copyright (C) 2018 - 2021 Settlers Freaks <sf-team at siedler25.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

add_subdirectory(common)
add_subdirectory(driver)
add_subdirectory(libGamedata)
add_subdirectory(libsamplerate)
add_subdirectory(rttrConfig)
add_subdirectory(s25client)
add_subdirectory(s25main)
