# Copyright (C) 2005 - 2021 Settlers Freaks <sf-team at siedler25.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

include(AddTestcase)

add_subdirectory(common)
add_subdirectory(languages)
add_subdirectory(legacyFiles)
add_subdirectory(libGameData)
add_subdirectory(libsamplerate_cpp)
add_subdirectory(mockupDrivers)
add_subdirectory(rttrConfig)
add_subdirectory(s25client)
add_subdirectory(s25Main)
add_subdirectory(testHelpers)
