#################################################################################
### $Id: CMakeLists.txt 6458 2010-05-31 11:38:51Z FloSoft $
#################################################################################

ADD_SUBDIRECTORY( WinAPI )
ADD_SUBDIRECTORY( GLFW )
ADD_SUBDIRECTORY( SDL )

#################################################################################
